Fixed overflow bug (iOS and iPadOS)

--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,10 @@ body {
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 }
 
+* {
+  overflow-x: hidden;
+}
+
 h1,
 h2 {
   font-weight: 700;
